parser.output
Grammar

    0 $accept: Program $end

    1 Program: Funcs

    2 Funcs: %empty
    3      | FuncDecl Funcs

    4 $@1: %empty

    5 $@2: %empty

    6 FuncDecl: RetType tkid $@1 tklp Formals tkrp $@2 tklbrace Statements tkrbrace

    7 RetType: Type
    8        | tkvoid

    9 Formals: %empty
   10        | FormalsList

   11 FormalsList: FormalDecl
   12            | FormalDecl tkcomma FormalsList

   13 FormalDecl: Type tkid

   14 Statements: Statement
   15           | Statements Statement

   16 Exp: tklp Exp tkrp
   17    | Exp tkarithmetic Exp
   18    | Exp tkproduct Exp
   19    | tkid
   20    | Call
   21    | tknumber
   22    | tknumber tkb
   23    | tksrting
   24    | tktrue
   25    | tkfalse
   26    | tknot Exp
   27    | Exp tkand Exp
   28    | Exp tkor Exp
   29    | Exp tkequality Exp
   30    | Exp tkorder Exp

   31 $@3: %empty

   32 Statement: tklbrace $@3 Statements tkrbrace
   33          | Type tkid tksc
   34          | Type tkid tkassign Exp tksc
   35          | tkid tkassign Exp tksc
   36          | Call tksc
   37          | tkreturn tksc
   38          | tkreturn Exp tksc
   39          | tkif tklp Exp tkrp M1 Statement M2
   40          | tkif tklp Exp tkrp M1 Statement M2 tkelse M1 Statement M2
   41          | tkwhile tklp Exp tkrp M1 Statement M2
   42          | tkwhile tklp Exp tkrp M1 Statement M2 tkelse M1 Statement M2
   43          | tkbreak tksc
   44          | tkcontinue tksc

   45 M1: %empty

   46 M2: %empty

   47 Call: tkid tklp ExpList tkrp
   48     | tkid tklp tkrp

   49 ExpList: Exp
   50        | Exp tkcomma ExpList

   51 Type: tkint
   52     | tkbyte
   53     | tkbool


Terminals, with rules where they appear

$end (0) 0
error (256)
tkvoid (258) 8
tkint (259) 51
tkbyte (260) 52
tkbool (261) 53
tkb (262) 22
tktrue (263) 24
tkfalse (264) 25
tkreturn (265) 37 38
tkbreak (266) 43
tkcontinue (267) 44
tksc (268) 33 34 35 36 37 38 43 44
tkcomma (269) 12 50
tklbrace (270) 6 32
tkrbrace (271) 6 32
tkif (272) 39 40
tkwhile (273) 41 42
tkid (274) 6 13 19 33 34 35 47 48
tknumber (275) 21 22
tksrting (276) 23
tkassign (277) 34 35
tkor (278) 28
tkand (279) 27
tkequality (280) 29
tkorder (281) 30
tkarithmetic (282) 17
tkproduct (283) 18
tknot (284) 26
tklp (285) 6 16 39 40 41 42 47 48
tkrp (286) 6 16 39 40 41 42 47 48
then (287)
tkelse (288) 40 42


Nonterminals, with rules where they appear

$accept (34)
    on left: 0
Program (35)
    on left: 1, on right: 0
Funcs (36)
    on left: 2 3, on right: 1 3
FuncDecl (37)
    on left: 6, on right: 3
$@1 (38)
    on left: 4, on right: 6
$@2 (39)
    on left: 5, on right: 6
RetType (40)
    on left: 7 8, on right: 6
Formals (41)
    on left: 9 10, on right: 6
FormalsList (42)
    on left: 11 12, on right: 10 12
FormalDecl (43)
    on left: 13, on right: 11 12
Statements (44)
    on left: 14 15, on right: 6 15 32
Exp (45)
    on left: 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30, on right:
    16 17 18 26 27 28 29 30 34 35 38 39 40 41 42 49 50
Statement (46)
    on left: 32 33 34 35 36 37 38 39 40 41 42 43 44, on right: 14 15
    39 40 41 42
$@3 (47)
    on left: 31, on right: 32
M1 (48)
    on left: 45, on right: 39 40 41 42
M2 (49)
    on left: 46, on right: 39 40 41 42
Call (50)
    on left: 47 48, on right: 20 36
ExpList (51)
    on left: 49 50, on right: 47 50
Type (52)
    on left: 51 52 53, on right: 7 13 33 34


State 0

    0 $accept: . Program $end
    1 Program: . Funcs
    2 Funcs: . %empty
    3      | . FuncDecl Funcs
    6 FuncDecl: . RetType tkid $@1 tklp Formals tkrp $@2 tklbrace Statements tkrbrace
    7 RetType: . Type
    8        | . tkvoid
   51 Type: . tkint
   52     | . tkbyte
   53     | . tkbool

    tkvoid  shift, and go to state 1
    tkint   shift, and go to state 2
    tkbyte  shift, and go to state 3
    tkbool  shift, and go to state 4

    $default  reduce using rule 2 (Funcs)

    Program   go to state 5
    Funcs     go to state 6
    FuncDecl  go to state 7
    RetType   go to state 8
    Type      go to state 9


State 1

    8 RetType: tkvoid .

    $default  reduce using rule 8 (RetType)


State 2

   51 Type: tkint .

    $default  reduce using rule 51 (Type)


State 3

   52 Type: tkbyte .

    $default  reduce using rule 52 (Type)


State 4

   53 Type: tkbool .

    $default  reduce using rule 53 (Type)


State 5

    0 $accept: Program . $end

    $end  shift, and go to state 10


State 6

    1 Program: Funcs .

    $default  reduce using rule 1 (Program)


State 7

    2 Funcs: . %empty
    3      | . FuncDecl Funcs
    3      | FuncDecl . Funcs
    6 FuncDecl: . RetType tkid $@1 tklp Formals tkrp $@2 tklbrace Statements tkrbrace
    7 RetType: . Type
    8        | . tkvoid
   51 Type: . tkint
   52     | . tkbyte
   53     | . tkbool

    tkvoid  shift, and go to state 1
    tkint   shift, and go to state 2
    tkbyte  shift, and go to state 3
    tkbool  shift, and go to state 4

    $default  reduce using rule 2 (Funcs)

    Funcs     go to state 11
    FuncDecl  go to state 7
    RetType   go to state 8
    Type      go to state 9


State 8

    6 FuncDecl: RetType . tkid $@1 tklp Formals tkrp $@2 tklbrace Statements tkrbrace

    tkid  shift, and go to state 12


State 9

    7 RetType: Type .

    $default  reduce using rule 7 (RetType)


State 10

    0 $accept: Program $end .

    $default  accept


State 11

    3 Funcs: FuncDecl Funcs .

    $default  reduce using rule 3 (Funcs)


State 12

    4 $@1: . %empty
    6 FuncDecl: RetType tkid . $@1 tklp Formals tkrp $@2 tklbrace Statements tkrbrace

    $default  reduce using rule 4 ($@1)

    $@1  go to state 13


State 13

    6 FuncDecl: RetType tkid $@1 . tklp Formals tkrp $@2 tklbrace Statements tkrbrace

    tklp  shift, and go to state 14


State 14

    6 FuncDecl: RetType tkid $@1 tklp . Formals tkrp $@2 tklbrace Statements tkrbrace
    9 Formals: . %empty
   10        | . FormalsList
   11 FormalsList: . FormalDecl
   12            | . FormalDecl tkcomma FormalsList
   13 FormalDecl: . Type tkid
   51 Type: . tkint
   52     | . tkbyte
   53     | . tkbool

    tkint   shift, and go to state 2
    tkbyte  shift, and go to state 3
    tkbool  shift, and go to state 4

    $default  reduce using rule 9 (Formals)

    Formals      go to state 15
    FormalsList  go to state 16
    FormalDecl   go to state 17
    Type         go to state 18


State 15

    6 FuncDecl: RetType tkid $@1 tklp Formals . tkrp $@2 tklbrace Statements tkrbrace

    tkrp  shift, and go to state 19


State 16

   10 Formals: FormalsList .

    $default  reduce using rule 10 (Formals)


State 17

   11 FormalsList: FormalDecl .
   12            | FormalDecl . tkcomma FormalsList

    tkcomma  shift, and go to state 20

    $default  reduce using rule 11 (FormalsList)


State 18

   13 FormalDecl: Type . tkid

    tkid  shift, and go to state 21


State 19

    5 $@2: . %empty
    6 FuncDecl: RetType tkid $@1 tklp Formals tkrp . $@2 tklbrace Statements tkrbrace

    $default  reduce using rule 5 ($@2)

    $@2  go to state 22


State 20

   11 FormalsList: . FormalDecl
   12            | . FormalDecl tkcomma FormalsList
   12            | FormalDecl tkcomma . FormalsList
   13 FormalDecl: . Type tkid
   51 Type: . tkint
   52     | . tkbyte
   53     | . tkbool

    tkint   shift, and go to state 2
    tkbyte  shift, and go to state 3
    tkbool  shift, and go to state 4

    FormalsList  go to state 23
    FormalDecl   go to state 17
    Type         go to state 18


State 21

   13 FormalDecl: Type tkid .

    $default  reduce using rule 13 (FormalDecl)


State 22

    6 FuncDecl: RetType tkid $@1 tklp Formals tkrp $@2 . tklbrace Statements tkrbrace

    tklbrace  shift, and go to state 24


State 23

   12 FormalsList: FormalDecl tkcomma FormalsList .

    $default  reduce using rule 12 (FormalsList)


State 24

    6 FuncDecl: RetType tkid $@1 tklp Formals tkrp $@2 tklbrace . Statements tkrbrace
   14 Statements: . Statement
   15           | . Statements Statement
   32 Statement: . tklbrace $@3 Statements tkrbrace
   33          | . Type tkid tksc
   34          | . Type tkid tkassign Exp tksc
   35          | . tkid tkassign Exp tksc
   36          | . Call tksc
   37          | . tkreturn tksc
   38          | . tkreturn Exp tksc
   39          | . tkif tklp Exp tkrp M1 Statement M2
   40          | . tkif tklp Exp tkrp M1 Statement M2 tkelse M1 Statement M2
   41          | . tkwhile tklp Exp tkrp M1 Statement M2
   42          | . tkwhile tklp Exp tkrp M1 Statement M2 tkelse M1 Statement M2
   43          | . tkbreak tksc
   44          | . tkcontinue tksc
   47 Call: . tkid tklp ExpList tkrp
   48     | . tkid tklp tkrp
   51 Type: . tkint
   52     | . tkbyte
   53     | . tkbool

    tkint       shift, and go to state 2
    tkbyte      shift, and go to state 3
    tkbool      shift, and go to state 4
    tkreturn    shift, and go to state 25
    tkbreak     shift, and go to state 26
    tkcontinue  shift, and go to state 27
    tklbrace    shift, and go to state 28
    tkif        shift, and go to state 29
    tkwhile     shift, and go to state 30
    tkid        shift, and go to state 31

    Statements  go to state 32
    Statement   go to state 33
    Call        go to state 34
    Type        go to state 35


State 25

   16 Exp: . tklp Exp tkrp
   17    | . Exp tkarithmetic Exp
   18    | . Exp tkproduct Exp
   19    | . tkid
   20    | . Call
   21    | . tknumber
   22    | . tknumber tkb
   23    | . tksrting
   24    | . tktrue
   25    | . tkfalse
   26    | . tknot Exp
   27    | . Exp tkand Exp
   28    | . Exp tkor Exp
   29    | . Exp tkequality Exp
   30    | . Exp tkorder Exp
   37 Statement: tkreturn . tksc
   38          | tkreturn . Exp tksc
   47 Call: . tkid tklp ExpList tkrp
   48     | . tkid tklp tkrp

    tktrue    shift, and go to state 36
    tkfalse   shift, and go to state 37
    tksc      shift, and go to state 38
    tkid      shift, and go to state 39
    tknumber  shift, and go to state 40
    tksrting  shift, and go to state 41
    tknot     shift, and go to state 42
    tklp      shift, and go to state 43

    Exp   go to state 44
    Call  go to state 45


State 26

   43 Statement: tkbreak . tksc

    tksc  shift, and go to state 46


State 27

   44 Statement: tkcontinue . tksc

    tksc  shift, and go to state 47


State 28

   31 $@3: . %empty
   32 Statement: tklbrace . $@3 Statements tkrbrace

    $default  reduce using rule 31 ($@3)

    $@3  go to state 48


State 29

   39 Statement: tkif . tklp Exp tkrp M1 Statement M2
   40          | tkif . tklp Exp tkrp M1 Statement M2 tkelse M1 Statement M2

    tklp  shift, and go to state 49


State 30

   41 Statement: tkwhile . tklp Exp tkrp M1 Statement M2
   42          | tkwhile . tklp Exp tkrp M1 Statement M2 tkelse M1 Statement M2

    tklp  shift, and go to state 50


State 31

   35 Statement: tkid . tkassign Exp tksc
   47 Call: tkid . tklp ExpList tkrp
   48     | tkid . tklp tkrp

    tkassign  shift, and go to state 51
    tklp      shift, and go to state 52


State 32

    6 FuncDecl: RetType tkid $@1 tklp Formals tkrp $@2 tklbrace Statements . tkrbrace
   15 Statements: Statements . Statement
   32 Statement: . tklbrace $@3 Statements tkrbrace
   33          | . Type tkid tksc
   34          | . Type tkid tkassign Exp tksc
   35          | . tkid tkassign Exp tksc
   36          | . Call tksc
   37          | . tkreturn tksc
   38          | . tkreturn Exp tksc
   39          | . tkif tklp Exp tkrp M1 Statement M2
   40          | . tkif tklp Exp tkrp M1 Statement M2 tkelse M1 Statement M2
   41          | . tkwhile tklp Exp tkrp M1 Statement M2
   42          | . tkwhile tklp Exp tkrp M1 Statement M2 tkelse M1 Statement M2
   43          | . tkbreak tksc
   44          | . tkcontinue tksc
   47 Call: . tkid tklp ExpList tkrp
   48     | . tkid tklp tkrp
   51 Type: . tkint
   52     | . tkbyte
   53     | . tkbool

    tkint       shift, and go to state 2
    tkbyte      shift, and go to state 3
    tkbool      shift, and go to state 4
    tkreturn    shift, and go to state 25
    tkbreak     shift, and go to state 26
    tkcontinue  shift, and go to state 27
    tklbrace    shift, and go to state 28
    tkrbrace    shift, and go to state 53
    tkif        shift, and go to state 29
    tkwhile     shift, and go to state 30
    tkid        shift, and go to state 31

    Statement  go to state 54
    Call       go to state 34
    Type       go to state 35


State 33

   14 Statements: Statement .

    $default  reduce using rule 14 (Statements)


State 34

   36 Statement: Call . tksc

    tksc  shift, and go to state 55


State 35

   33 Statement: Type . tkid tksc
   34          | Type . tkid tkassign Exp tksc

    tkid  shift, and go to state 56


State 36

   24 Exp: tktrue .

    $default  reduce using rule 24 (Exp)


State 37

   25 Exp: tkfalse .

    $default  reduce using rule 25 (Exp)


State 38

   37 Statement: tkreturn tksc .

    $default  reduce using rule 37 (Statement)


State 39

   19 Exp: tkid .
   47 Call: tkid . tklp ExpList tkrp
   48     | tkid . tklp tkrp

    tklp  shift, and go to state 52

    $default  reduce using rule 19 (Exp)


State 40

   21 Exp: tknumber .
   22    | tknumber . tkb

    tkb  shift, and go to state 57

    $default  reduce using rule 21 (Exp)


State 41

   23 Exp: tksrting .

    $default  reduce using rule 23 (Exp)


State 42

   16 Exp: . tklp Exp tkrp
   17    | . Exp tkarithmetic Exp
   18    | . Exp tkproduct Exp
   19    | . tkid
   20    | . Call
   21    | . tknumber
   22    | . tknumber tkb
   23    | . tksrting
   24    | . tktrue
   25    | . tkfalse
   26    | . tknot Exp
   26    | tknot . Exp
   27    | . Exp tkand Exp
   28    | . Exp tkor Exp
   29    | . Exp tkequality Exp
   30    | . Exp tkorder Exp
   47 Call: . tkid tklp ExpList tkrp
   48     | . tkid tklp tkrp

    tktrue    shift, and go to state 36
    tkfalse   shift, and go to state 37
    tkid      shift, and go to state 39
    tknumber  shift, and go to state 40
    tksrting  shift, and go to state 41
    tknot     shift, and go to state 42
    tklp      shift, and go to state 43

    Exp   go to state 58
    Call  go to state 45


State 43

   16 Exp: . tklp Exp tkrp
   16    | tklp . Exp tkrp
   17    | . Exp tkarithmetic Exp
   18    | . Exp tkproduct Exp
   19    | . tkid
   20    | . Call
   21    | . tknumber
   22    | . tknumber tkb
   23    | . tksrting
   24    | . tktrue
   25    | . tkfalse
   26    | . tknot Exp
   27    | . Exp tkand Exp
   28    | . Exp tkor Exp
   29    | . Exp tkequality Exp
   30    | . Exp tkorder Exp
   47 Call: . tkid tklp ExpList tkrp
   48     | . tkid tklp tkrp

    tktrue    shift, and go to state 36
    tkfalse   shift, and go to state 37
    tkid      shift, and go to state 39
    tknumber  shift, and go to state 40
    tksrting  shift, and go to state 41
    tknot     shift, and go to state 42
    tklp      shift, and go to state 43

    Exp   go to state 59
    Call  go to state 45


State 44

   17 Exp: Exp . tkarithmetic Exp
   18    | Exp . tkproduct Exp
   27    | Exp . tkand Exp
   28    | Exp . tkor Exp
   29    | Exp . tkequality Exp
   30    | Exp . tkorder Exp
   38 Statement: tkreturn Exp . tksc

    tksc          shift, and go to state 60
    tkor          shift, and go to state 61
    tkand         shift, and go to state 62
    tkequality    shift, and go to state 63
    tkorder       shift, and go to state 64
    tkarithmetic  shift, and go to state 65
    tkproduct     shift, and go to state 66


State 45

   20 Exp: Call .

    $default  reduce using rule 20 (Exp)


State 46

   43 Statement: tkbreak tksc .

    $default  reduce using rule 43 (Statement)


State 47

   44 Statement: tkcontinue tksc .

    $default  reduce using rule 44 (Statement)


State 48

   14 Statements: . Statement
   15           | . Statements Statement
   32 Statement: . tklbrace $@3 Statements tkrbrace
   32          | tklbrace $@3 . Statements tkrbrace
   33          | . Type tkid tksc
   34          | . Type tkid tkassign Exp tksc
   35          | . tkid tkassign Exp tksc
   36          | . Call tksc
   37          | . tkreturn tksc
   38          | . tkreturn Exp tksc
   39          | . tkif tklp Exp tkrp M1 Statement M2
   40          | . tkif tklp Exp tkrp M1 Statement M2 tkelse M1 Statement M2
   41          | . tkwhile tklp Exp tkrp M1 Statement M2
   42          | . tkwhile tklp Exp tkrp M1 Statement M2 tkelse M1 Statement M2
   43          | . tkbreak tksc
   44          | . tkcontinue tksc
   47 Call: . tkid tklp ExpList tkrp
   48     | . tkid tklp tkrp
   51 Type: . tkint
   52     | . tkbyte
   53     | . tkbool

    tkint       shift, and go to state 2
    tkbyte      shift, and go to state 3
    tkbool      shift, and go to state 4
    tkreturn    shift, and go to state 25
    tkbreak     shift, and go to state 26
    tkcontinue  shift, and go to state 27
    tklbrace    shift, and go to state 28
    tkif        shift, and go to state 29
    tkwhile     shift, and go to state 30
    tkid        shift, and go to state 31

    Statements  go to state 67
    Statement   go to state 33
    Call        go to state 34
    Type        go to state 35


State 49

   16 Exp: . tklp Exp tkrp
   17    | . Exp tkarithmetic Exp
   18    | . Exp tkproduct Exp
   19    | . tkid
   20    | . Call
   21    | . tknumber
   22    | . tknumber tkb
   23    | . tksrting
   24    | . tktrue
   25    | . tkfalse
   26    | . tknot Exp
   27    | . Exp tkand Exp
   28    | . Exp tkor Exp
   29    | . Exp tkequality Exp
   30    | . Exp tkorder Exp
   39 Statement: tkif tklp . Exp tkrp M1 Statement M2
   40          | tkif tklp . Exp tkrp M1 Statement M2 tkelse M1 Statement M2
   47 Call: . tkid tklp ExpList tkrp
   48     | . tkid tklp tkrp

    tktrue    shift, and go to state 36
    tkfalse   shift, and go to state 37
    tkid      shift, and go to state 39
    tknumber  shift, and go to state 40
    tksrting  shift, and go to state 41
    tknot     shift, and go to state 42
    tklp      shift, and go to state 43

    Exp   go to state 68
    Call  go to state 45


State 50

   16 Exp: . tklp Exp tkrp
   17    | . Exp tkarithmetic Exp
   18    | . Exp tkproduct Exp
   19    | . tkid
   20    | . Call
   21    | . tknumber
   22    | . tknumber tkb
   23    | . tksrting
   24    | . tktrue
   25    | . tkfalse
   26    | . tknot Exp
   27    | . Exp tkand Exp
   28    | . Exp tkor Exp
   29    | . Exp tkequality Exp
   30    | . Exp tkorder Exp
   41 Statement: tkwhile tklp . Exp tkrp M1 Statement M2
   42          | tkwhile tklp . Exp tkrp M1 Statement M2 tkelse M1 Statement M2
   47 Call: . tkid tklp ExpList tkrp
   48     | . tkid tklp tkrp

    tktrue    shift, and go to state 36
    tkfalse   shift, and go to state 37
    tkid      shift, and go to state 39
    tknumber  shift, and go to state 40
    tksrting  shift, and go to state 41
    tknot     shift, and go to state 42
    tklp      shift, and go to state 43

    Exp   go to state 69
    Call  go to state 45


State 51

   16 Exp: . tklp Exp tkrp
   17    | . Exp tkarithmetic Exp
   18    | . Exp tkproduct Exp
   19    | . tkid
   20    | . Call
   21    | . tknumber
   22    | . tknumber tkb
   23    | . tksrting
   24    | . tktrue
   25    | . tkfalse
   26    | . tknot Exp
   27    | . Exp tkand Exp
   28    | . Exp tkor Exp
   29    | . Exp tkequality Exp
   30    | . Exp tkorder Exp
   35 Statement: tkid tkassign . Exp tksc
   47 Call: . tkid tklp ExpList tkrp
   48     | . tkid tklp tkrp

    tktrue    shift, and go to state 36
    tkfalse   shift, and go to state 37
    tkid      shift, and go to state 39
    tknumber  shift, and go to state 40
    tksrting  shift, and go to state 41
    tknot     shift, and go to state 42
    tklp      shift, and go to state 43

    Exp   go to state 70
    Call  go to state 45


State 52

   16 Exp: . tklp Exp tkrp
   17    | . Exp tkarithmetic Exp
   18    | . Exp tkproduct Exp
   19    | . tkid
   20    | . Call
   21    | . tknumber
   22    | . tknumber tkb
   23    | . tksrting
   24    | . tktrue
   25    | . tkfalse
   26    | . tknot Exp
   27    | . Exp tkand Exp
   28    | . Exp tkor Exp
   29    | . Exp tkequality Exp
   30    | . Exp tkorder Exp
   47 Call: . tkid tklp ExpList tkrp
   47     | tkid tklp . ExpList tkrp
   48     | . tkid tklp tkrp
   48     | tkid tklp . tkrp
   49 ExpList: . Exp
   50        | . Exp tkcomma ExpList

    tktrue    shift, and go to state 36
    tkfalse   shift, and go to state 37
    tkid      shift, and go to state 39
    tknumber  shift, and go to state 40
    tksrting  shift, and go to state 41
    tknot     shift, and go to state 42
    tklp      shift, and go to state 43
    tkrp      shift, and go to state 71

    Exp      go to state 72
    Call     go to state 45
    ExpList  go to state 73


State 53

    6 FuncDecl: RetType tkid $@1 tklp Formals tkrp $@2 tklbrace Statements tkrbrace .

    $default  reduce using rule 6 (FuncDecl)


State 54

   15 Statements: Statements Statement .

    $default  reduce using rule 15 (Statements)


State 55

   36 Statement: Call tksc .

    $default  reduce using rule 36 (Statement)


State 56

   33 Statement: Type tkid . tksc
   34          | Type tkid . tkassign Exp tksc

    tksc      shift, and go to state 74
    tkassign  shift, and go to state 75


State 57

   22 Exp: tknumber tkb .

    $default  reduce using rule 22 (Exp)


State 58

   17 Exp: Exp . tkarithmetic Exp
   18    | Exp . tkproduct Exp
   26    | tknot Exp .
   27    | Exp . tkand Exp
   28    | Exp . tkor Exp
   29    | Exp . tkequality Exp
   30    | Exp . tkorder Exp

    $default  reduce using rule 26 (Exp)


State 59

   16 Exp: tklp Exp . tkrp
   17    | Exp . tkarithmetic Exp
   18    | Exp . tkproduct Exp
   27    | Exp . tkand Exp
   28    | Exp . tkor Exp
   29    | Exp . tkequality Exp
   30    | Exp . tkorder Exp

    tkor          shift, and go to state 61
    tkand         shift, and go to state 62
    tkequality    shift, and go to state 63
    tkorder       shift, and go to state 64
    tkarithmetic  shift, and go to state 65
    tkproduct     shift, and go to state 66
    tkrp          shift, and go to state 76


State 60

   38 Statement: tkreturn Exp tksc .

    $default  reduce using rule 38 (Statement)


State 61

   16 Exp: . tklp Exp tkrp
   17    | . Exp tkarithmetic Exp
   18    | . Exp tkproduct Exp
   19    | . tkid
   20    | . Call
   21    | . tknumber
   22    | . tknumber tkb
   23    | . tksrting
   24    | . tktrue
   25    | . tkfalse
   26    | . tknot Exp
   27    | . Exp tkand Exp
   28    | . Exp tkor Exp
   28    | Exp tkor . Exp
   29    | . Exp tkequality Exp
   30    | . Exp tkorder Exp
   47 Call: . tkid tklp ExpList tkrp
   48     | . tkid tklp tkrp

    tktrue    shift, and go to state 36
    tkfalse   shift, and go to state 37
    tkid      shift, and go to state 39
    tknumber  shift, and go to state 40
    tksrting  shift, and go to state 41
    tknot     shift, and go to state 42
    tklp      shift, and go to state 43

    Exp   go to state 77
    Call  go to state 45


State 62

   16 Exp: . tklp Exp tkrp
   17    | . Exp tkarithmetic Exp
   18    | . Exp tkproduct Exp
   19    | . tkid
   20    | . Call
   21    | . tknumber
   22    | . tknumber tkb
   23    | . tksrting
   24    | . tktrue
   25    | . tkfalse
   26    | . tknot Exp
   27    | . Exp tkand Exp
   27    | Exp tkand . Exp
   28    | . Exp tkor Exp
   29    | . Exp tkequality Exp
   30    | . Exp tkorder Exp
   47 Call: . tkid tklp ExpList tkrp
   48     | . tkid tklp tkrp

    tktrue    shift, and go to state 36
    tkfalse   shift, and go to state 37
    tkid      shift, and go to state 39
    tknumber  shift, and go to state 40
    tksrting  shift, and go to state 41
    tknot     shift, and go to state 42
    tklp      shift, and go to state 43

    Exp   go to state 78
    Call  go to state 45


State 63

   16 Exp: . tklp Exp tkrp
   17    | . Exp tkarithmetic Exp
   18    | . Exp tkproduct Exp
   19    | . tkid
   20    | . Call
   21    | . tknumber
   22    | . tknumber tkb
   23    | . tksrting
   24    | . tktrue
   25    | . tkfalse
   26    | . tknot Exp
   27    | . Exp tkand Exp
   28    | . Exp tkor Exp
   29    | . Exp tkequality Exp
   29    | Exp tkequality . Exp
   30    | . Exp tkorder Exp
   47 Call: . tkid tklp ExpList tkrp
   48     | . tkid tklp tkrp

    tktrue    shift, and go to state 36
    tkfalse   shift, and go to state 37
    tkid      shift, and go to state 39
    tknumber  shift, and go to state 40
    tksrting  shift, and go to state 41
    tknot     shift, and go to state 42
    tklp      shift, and go to state 43

    Exp   go to state 79
    Call  go to state 45


State 64

   16 Exp: . tklp Exp tkrp
   17    | . Exp tkarithmetic Exp
   18    | . Exp tkproduct Exp
   19    | . tkid
   20    | . Call
   21    | . tknumber
   22    | . tknumber tkb
   23    | . tksrting
   24    | . tktrue
   25    | . tkfalse
   26    | . tknot Exp
   27    | . Exp tkand Exp
   28    | . Exp tkor Exp
   29    | . Exp tkequality Exp
   30    | . Exp tkorder Exp
   30    | Exp tkorder . Exp
   47 Call: . tkid tklp ExpList tkrp
   48     | . tkid tklp tkrp

    tktrue    shift, and go to state 36
    tkfalse   shift, and go to state 37
    tkid      shift, and go to state 39
    tknumber  shift, and go to state 40
    tksrting  shift, and go to state 41
    tknot     shift, and go to state 42
    tklp      shift, and go to state 43

    Exp   go to state 80
    Call  go to state 45


State 65

   16 Exp: . tklp Exp tkrp
   17    | . Exp tkarithmetic Exp
   17    | Exp tkarithmetic . Exp
   18    | . Exp tkproduct Exp
   19    | . tkid
   20    | . Call
   21    | . tknumber
   22    | . tknumber tkb
   23    | . tksrting
   24    | . tktrue
   25    | . tkfalse
   26    | . tknot Exp
   27    | . Exp tkand Exp
   28    | . Exp tkor Exp
   29    | . Exp tkequality Exp
   30    | . Exp tkorder Exp
   47 Call: . tkid tklp ExpList tkrp
   48     | . tkid tklp tkrp

    tktrue    shift, and go to state 36
    tkfalse   shift, and go to state 37
    tkid      shift, and go to state 39
    tknumber  shift, and go to state 40
    tksrting  shift, and go to state 41
    tknot     shift, and go to state 42
    tklp      shift, and go to state 43

    Exp   go to state 81
    Call  go to state 45


State 66

   16 Exp: . tklp Exp tkrp
   17    | . Exp tkarithmetic Exp
   18    | . Exp tkproduct Exp
   18    | Exp tkproduct . Exp
   19    | . tkid
   20    | . Call
   21    | . tknumber
   22    | . tknumber tkb
   23    | . tksrting
   24    | . tktrue
   25    | . tkfalse
   26    | . tknot Exp
   27    | . Exp tkand Exp
   28    | . Exp tkor Exp
   29    | . Exp tkequality Exp
   30    | . Exp tkorder Exp
   47 Call: . tkid tklp ExpList tkrp
   48     | . tkid tklp tkrp
